--- a/src/templates/canvas.module.css
+++ b/src/templates/canvas.module.css
@@ -9,7 +9,7 @@
   font-family: var(--font-stack);
   position: relative;
 
-  background-color: var(--bgColor-default);
+  background-color: var(--bgColor-muted);
   background-image: radial-gradient(var(--overlay-backdrop-bgColor) 2px, transparent 2px);
   background-size: var(--golden-number) var(--golden-number);
   background-position: var(--golden-half-minus) var(--golden-half-minus);
